--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fabric8-npm-dependencies",
-  "description": "A collection of Angular components and other useful things to be shared.",
-  "version": "0.0.0-development",
+  "name": "fabric8-npm-pipeline-test-prj",
+  "description": "A test project to try out UpdateBot for realz.",
+  "version": "1.2.3",
   "dependencies": {
     "fabric8-planner": "0.36.0",
     "fabric8-npm-pipeline-test-prj": "0.0.3",
